added test script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ r:
   - bioc-devel
   - bioc-release
 
+install:
+  - R -e 'devtools::install_deps(dep = T)'
+
 script:
   - cd unit-testing && bash run_tests.sh
 
